k8s/manifests/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dic-frontend-service
  namespace: dictionary-namespace
spec:
  selector:
    app: dic-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
  # Type LoadBalancer is for EKS testing. It need to comment 'nodePort: 30080' and 'type: NodePort' while testing.
  # type: LoadBalancer
